--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </script>
 </head>
 <body>
-  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAYAAAB/HSuDAAEAAElEQVR4nFy9W5Yk261jC9JS3arb/y" alt="Rydli Logo" class="logo">
+  <img src="rydli_logo.png" alt="Rydli Logo" class="logo" />
   <div class="mode-toggle-wrapper">
     <div class="toggle">
       <button id="btn-rider" onclick="toggleView('rider')">Rider</button>
