--- a/index.html
+++ b/index.html
@@ -10,13 +10,7 @@
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Inter', sans-serif; background: #ffffff; color: #111; line-height: 1.6; }
-    .logo {
-  display: block;
-  margin: 2rem auto 0;
-  height: auto;
-  max-height: 200px;
-  max-width: 300px;
-}
+    .logo { display: block; margin: 2rem auto 0; height: 48px; }
     .mode-toggle-wrapper { display: flex; justify-content: center; padding: 2rem; background: #fff; border-bottom: 1px solid #eee; }
     .toggle { background: #f0f0f0; border-radius: 999px; padding: 0.5rem; display: flex; gap: 0.5rem; }
     .toggle button { background: transparent; border: none; padding: 0.5rem 1rem; border-radius: 999px; font-weight: 600; cursor: pointer; color: #333; }
@@ -46,7 +40,7 @@
   </script>
 </head>
 <body>
-  <img src="rydli_logo.png" alt="Rydli Logo" class="logo" />
+  <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAABAAAAAQACAYAAAB/HSuDAAEAAElEQVR4nFy9W5Yk261jC9JS3arb/y" alt="Rydli Logo" class="logo">
   <div class="mode-toggle-wrapper">
     <div class="toggle">
       <button id="btn-rider" onclick="toggleView('rider')">Rider</button>
@@ -57,9 +51,14 @@
     <section class="hero">
       <h1>Rides made simple.</h1>
       <p>Join Rydli — the future of flexible, fair ridesharing.</p>
-      <div class="buttons" style="margin-top: 2rem;">
-        <a href="#">Join the Waitlist</a>
-      </div>
+      <form action="https://formspree.io/f/mblokdno" method="POST" style="max-width: 400px; margin: 2rem auto;">
+  <label for="email" style="display:block; margin-bottom: 0.5rem; font-weight: 600;">Join the Waitlist</label>
+  <input type="email" name="email" id="email" required placeholder="Your email"
+         style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid #ccc; margin-bottom: 1rem;" />
+  <button type="submit" style="padding: 0.75rem 1.5rem; background: black; color: white; border: none; border-radius: 999px; font-weight: 600;">
+    Submit
+  </button>
+</form>
     </section>
     <section class="subscriptions">
       <h2>Flexible Plans</h2>
@@ -104,9 +103,14 @@
     <section class="hero">
       <h1>Drive with Rydli.</h1>
       <p>Earn more. Get treated better. Rydli is built for drivers.</p>
-      <div class="buttons" style="margin-top: 2rem;">
-        <a href="#">Sign Up to Drive</a>
-      </div>
+      <form action="https://formspree.io/f/xovdljgo" method="POST" style="max-width: 400px; margin: 2rem auto;">
+  <label for="driverEmail" style="display:block; margin-bottom: 0.5rem; font-weight: 600;">Sign Up to Drive</label>
+  <input type="email" name="email" id="driverEmail" required placeholder="Your email"
+         style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid #ccc; margin-bottom: 1rem;" />
+  <button type="submit" style="padding: 0.75rem 1.5rem; background: black; color: white; border: none; border-radius: 999px; font-weight: 600;">
+    Submit
+  </button>
+</form>
       <div class="promo">💸 Get 100% of the ride fare on your first 50 rides — only on Rydli.</div>
     </section>
     <section class="driver-benefits">
