--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   display: block;
   margin: 2rem auto 0;
   height: auto;
-  max-height: 300px;
-  max-width: 400px;
+  max-height: 100px;
+  max-width: 200px;
 }
     .mode-toggle-wrapper { display: flex; justify-content: center; padding: 2rem; background: #fff; border-bottom: 1px solid #eee; }
     .toggle { background: #f0f0f0; border-radius: 999px; padding: 0.5rem; display: flex; gap: 0.5rem; }
@@ -32,7 +32,12 @@
     .driver-benefits h2 { font-size: 2rem; margin-bottom: 1rem; }
     .app-download p { font-size: 1.1rem; margin-bottom: 1rem; }
     footer { text-align: center; padding: 2rem; font-size: 0.875rem; color: #888; }
-  </style>
+  @keyframes pulse {
+  0% { transform: scale(1); opacity: 1; }
+  50% { transform: scale(1.1); opacity: 0.8; }
+  100% { transform: scale(1); opacity: 1; }
+}
+</style>
   <script>
     function toggleView(view) {
       document.getElementById('rider').classList.remove('active');
@@ -74,8 +79,8 @@
           <strong>Only pay per ride</strong>
           <p>No monthly fees. Perfect for occasional riders who just want flexibility without commitment.</p>
         </div>
-        <div class="plan">
-          <h3>Rydli+ Subscription</h3>
+        <div class="plan" style="border: 2px solid #007bff; background: #e6f0ff; position: relative; box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05);">
+          <h3 style="color: #007bff; position: relative;">Rydli+ <span style="background: #007bff; color: white; font-size: 0.75rem; padding: 0.25rem 0.5rem; border-radius: 6px; margin-left: 0.5rem; vertical-align: middle; animation: pulse 1.5s infinite;">Best Value</span></h3>
           <strong>$499/month</strong>
           <p>Includes 1,000 miles of rides, top rated drivers, and priority rider support for a premium experience.</p>
         </div>
