--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   display: block;
   margin: 2rem auto 0;
   height: auto;
-  max-height: 250px;
-  max-width: 350px;
+  max-height: 100px;
+  max-width: 200px;
 }
     .mode-toggle-wrapper { display: flex; justify-content: center; padding: 2rem; background: #fff; border-bottom: 1px solid #eee; }
     .toggle { background: #f0f0f0; border-radius: 999px; padding: 0.5rem; display: flex; gap: 0.5rem; }
@@ -89,11 +89,24 @@
     <section class="features">
       <h2>Why Choose Rydli?</h2>
       <div class="feature-grid">
-        <div class="feature">No hidden fees</div>
-        <div class="feature">Fair driver pay</div>
-        <div class="feature">Clean, modern app</div>
-        <div class="feature">Subscription or Pay-per-Ride</div>
-      </div>
+  <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
+    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">No hidden fees</h4>
+    <p style="margin: 0; color: #333; font-size: 0.95rem;">You pay what you see—no surprises, ever.</p>
+  </div>
+  <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
+    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Fair driver pay</h4>
+    <p style="margin: 0; color: #333; font-size: 0.95rem;">We prioritize our drivers with fair and transparent earnings.</p>
+  </div>
+  <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
+    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Clean, modern app</h4>
+    <p style="margin: 0; color: #333; font-size: 0.95rem;">Simple, sleek, and fast — built for ease of use.</p>
+  </div>
+  <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
+    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Subscription or Pay-per-Ride</h4>
+    <p style="margin: 0; color: #333; font-size: 0.95rem;">Choose the plan that works best for your lifestyle.</p>
+  </div>
+</div>
+        
     </section>
     <section class="screenshots">
       <h2>App Preview</h2>
@@ -127,11 +140,26 @@
     <section class="driver-benefits">
       <h2>Driver Benefits</h2>
       <div class="feature-grid">
-        <div class="driver-benefit">Keep more of what you earn</div>
-        <div class="driver-benefit">Flexible hours — you decide when</div>
-        <div class="driver-benefit">Get paid daily</div>
-        <div class="driver-benefit">No complicated commission structures</div>
-        <div class="driver-benefit">Includes a debit card and banking features where you can keep a balance</div>
+        <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Keep more of what you earn</h4>
+  <p style="margin: 0; color: #333; font-size: 0.95rem;">Our low commission structure puts more money in your pocket every ride.</p>
+</div>
+<div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Flexible hours</h4>
+  <p style="margin: 0; color: #333; font-size: 0.95rem;">You're in control — drive whenever it fits your schedule.</p>
+</div>
+<div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Get paid daily</h4>
+  <p style="margin: 0; color: #333; font-size: 0.95rem;">Instant access to your earnings so you’re never left waiting.</p>
+</div>
+<div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Simple payouts</h4>
+  <p style="margin: 0; color: #333; font-size: 0.95rem;">No confusing formulas — just clear, fair pay.</p>
+</div>
+<div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Banking with debit card</h4>
+  <p style="margin: 0; color: #333; font-size: 0.95rem;">Access your funds with a Rydli debit card and manage your balance directly in the app.</p>
+</div>
       </div>
     </section>
     <section class="app-download">
