--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Inter', sans-serif; background: #ffffff; color: #111; line-height: 1.6; }
     .logo {
-  display: block;
-  margin: 2rem auto 0;
-  height: auto;
-  max-height: 250px;
-  max-width: 350px;
-}
+      display: block;
+      margin: 2rem auto 0;
+      height: auto;
+      max-height: 250px;
+      max-width: 350px;
+    }
     .mode-toggle-wrapper { display: flex; justify-content: center; padding: 2rem; background: #fff; border-bottom: 1px solid #eee; }
     .toggle { background: #f0f0f0; border-radius: 999px; padding: 0.5rem; display: flex; gap: 0.5rem; }
     .toggle button { background: transparent; border: none; padding: 0.5rem 1rem; border-radius: 999px; font-weight: 600; cursor: pointer; color: #333; }
@@ -32,12 +32,12 @@
     .driver-benefits h2 { font-size: 2rem; margin-bottom: 1rem; }
     .app-download p { font-size: 1.1rem; margin-bottom: 1rem; }
     footer { text-align: center; padding: 2rem; font-size: 0.875rem; color: #888; }
-  @keyframes pulse {
-  0% { transform: scale(1); opacity: 1; }
-  50% { transform: scale(1.1); opacity: 0.8; }
-  100% { transform: scale(1); opacity: 1; }
-}
-</style>
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.1); opacity: 0.8; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+  </style>
   <script>
     function toggleView(view) {
       document.getElementById('rider').classList.remove('active');
@@ -58,7 +58,7 @@
       <button id="btn-driver" onclick="toggleView('driver')">Driver</button>
     </div>
   </div>
-  <div id="rider" class="section">
+<div id="rider" class="section">
     <section class="hero">
       <h1>Rides made simple.</h1>
       <p>Join Rydli — the future of flexible, fair ridesharing.</p>
@@ -90,23 +90,22 @@
       <h2>Why Choose Rydli?</h2>
       <div class="feature-grid">
   <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">No hidden fees</h4>
+    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">💰 No hidden fees</h4>
     <p style="margin: 0; color: #333; font-size: 0.95rem;">You pay what you see—no surprises, ever.</p>
   </div>
   <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Fair driver pay</h4>
+    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">🚕 Fair driver pay</h4>
     <p style="margin: 0; color: #333; font-size: 0.95rem;">We prioritize our drivers with fair and transparent earnings.</p>
   </div>
   <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Clean, modern app</h4>
+    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">📱 Clean, modern app</h4>
     <p style="margin: 0; color: #333; font-size: 0.95rem;">Simple, sleek, and fast — built for ease of use.</p>
   </div>
   <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Subscription or Pay-per-Ride</h4>
+    <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">📦 Subscription or Pay-per-Ride</h4>
     <p style="margin: 0; color: #333; font-size: 0.95rem;">Choose the plan that works best for your lifestyle.</p>
   </div>
 </div>
-        
     </section>
     <section class="screenshots">
       <h2>App Preview</h2>
@@ -141,23 +140,23 @@
       <h2>Driver Benefits</h2>
       <div class="feature-grid">
         <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Keep more of what you earn</h4>
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">💸 Keep more of what you earn</h4>
   <p style="margin: 0; color: #333; font-size: 0.95rem;">Our low commission structure puts more money in your pocket every ride.</p>
 </div>
 <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Flexible hours</h4>
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">⏰ Flexible hours</h4>
   <p style="margin: 0; color: #333; font-size: 0.95rem;">You're in control — drive whenever it fits your schedule.</p>
 </div>
 <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Get paid daily</h4>
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">💳 Get paid daily</h4>
   <p style="margin: 0; color: #333; font-size: 0.95rem;">Instant access to your earnings so you’re never left waiting.</p>
 </div>
 <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Simple payouts</h4>
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">📈 Simple payouts</h4>
   <p style="margin: 0; color: #333; font-size: 0.95rem;">No confusing formulas — just clear, fair pay.</p>
 </div>
 <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">Banking with debit card</h4>
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">🏦 Banking with debit card</h4>
   <p style="margin: 0; color: #333; font-size: 0.95rem;">Access your funds with a Rydli debit card and manage your balance directly in the app.</p>
 </div>
       </div>
