--- a/index.html
+++ b/index.html
@@ -37,7 +37,39 @@
       50% { transform: scale(1.1); opacity: 0.8; }
       100% { transform: scale(1); opacity: 1; }
     }
-  </style>
+  @media (max-width: 768px) {
+  .hero, .screenshots, .features, .subscriptions, .driver-benefits, .app-download {
+    padding: 2rem 1rem;
+  }
+  .plans, .feature-grid, .screenshot-gallery {
+    flex-direction: column;
+    align-items: center;
+  }
+  .plan, .feature {
+    width: 90%;
+  }
+  .buttons a {
+    display: block;
+    margin: 0.5rem auto;
+  }
+  .mode-toggle-wrapper {
+    flex-direction: column;
+    padding: 1rem;
+  }
+  .toggle {
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .logo {
+    max-width: 80%;
+    max-height: 200px;
+  }
+  form {
+    width: 100%;
+    padding: 0 1rem;
+  }
+}
+</style>
   <script>
     function toggleView(view) {
       document.getElementById('rider').classList.remove('active');
