--- a/index.html
+++ b/index.html
@@ -140,13 +140,12 @@
 </div>
     </section>
     <section class="screenshots">
-      <h2>App Preview</h2>
-      <div class="screenshot-gallery">
-        <img src="screenshot1.png" alt="App screenshot 1">
-        <img src="screenshot2.png" alt="App screenshot 2">
-        <img src="screenshot3.png" alt="App screenshot 3">
-      </div>
-    </section>
+  <h2>App Preview</h2>
+  <div style="text-align: center;">
+    <img src="image1.PNG" alt="App preview" style="max-width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
+    <p style="color: #888; font-size: 0.9rem; margin-top: 1rem;">This is a prototype preview used for illustrative purposes only.</p>
+  </div>
+</section>
     <section class="app-download">
       <p>Download the Rider App and get moving with Rydli today.</p>
       <div class="buttons" style="margin-top: 2rem;">
