--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
 </div>
     </section>
     <section class="screenshots">
-  <h2>App Preview</h2>
+  <h2 style="margin-bottom: 1.5rem;">App Preview</h2>
   <div style="text-align: center;">
-    <img src="image1.PNG" alt="App preview" style="max-width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
+    <img src="image1.PNG" alt="App preview" style="max-width: 600px; width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 16px rgba(0,0,0,0.1);">
     <p style="color: #888; font-size: 0.9rem; margin-top: 1rem;">This is a prototype preview used for illustrative purposes only.</p>
   </div>
 </section>
