--- a/index.html
+++ b/index.html
@@ -183,14 +183,10 @@
   <p style="margin: 0; color: #333; font-size: 0.95rem;">Instant access to your earnings so you’re never left waiting.</p>
 </div>
 <div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">📈 Simple payouts</h4>
-  <p style="margin: 0; color: #333; font-size: 0.95rem;">No confusing formulas — just clear, fair pay.</p>
+  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">🏬 Driver Support Centers</h4>
+  <p style="margin: 0; color: #333; font-size: 0.95rem;">Access in-person support, free snacks, drinks, and a comfortable place to recharge at any of our driver support centers.</p>
 </div>
-<div class="feature" style="border-left: 4px solid #007bff; background: #f0f8ff;">
-  <h4 style="margin-bottom: 0.5rem; color: #007bff; font-weight: 600;">🏦 Banking with debit card</h4>
-  <p style="margin: 0; color: #333; font-size: 0.95rem;">Access your funds with a Rydli debit card and manage your balance directly in the app.</p>
-</div>
-      </div>
+
     </section>
     <section class="app-download">
       <p>Download the Driver App to start earning with Rydli today.</p>
