--- a/index.html
+++ b/index.html
@@ -268,16 +268,37 @@
       document.body.appendChild(confettiScript);
 
       window.estimateFare = function () {
-        const start = document.getElementById('start').value.trim();
-        const end = document.getElementById('end').value.trim();
-        const result = document.getElementById('fare-result');
-        if (!start || !end) {
-          result.textContent = "Please enter both addresses.";
-          return;
-        }
-        const randomPrice = (Math.random() * 20 + 10).toFixed(2);
-        result.textContent = `Estimated fare: $${randomPrice}`;
-      };
+  const start = document.getElementById('start').value.trim();
+  const end = document.getElementById('end').value.trim();
+  const result = document.getElementById('fare-result');
+
+  if (!start || !end) {
+    result.textContent = "Please enter both addresses.";
+    return;
+  }
+
+  result.textContent = "Calculating...";
+
+  const apiKey = 'YOUR_API_KEY'; // Replace with your real Google Maps API key
+  const url = 'https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=' +
+              encodeURIComponent(start) + '&destinations=' + encodeURIComponent(end) + '&key=' + apiKey;
+
+  fetch('https://api.allorigins.win/get?url=' + encodeURIComponent(url))
+    .then(response => response.json())
+    .then(data => {
+      const content = JSON.parse(data.contents);
+      const distanceText = content.rows[0].elements[0].distance.text;
+      const durationText = content.rows[0].elements[0].duration.text;
+      const distanceMiles = parseFloat(distanceText.replace(/[^\d.]/g, ''));
+      const durationMinutes = parseFloat(durationText.replace(/[^\d.]/g, ''));
+
+      const fare = Math.max(6, (1.34 * distanceMiles + 0.45 * durationMinutes)).toFixed(2);
+      result.textContent = 'Estimated fare: $' + fare;
+    })
+    .catch(() => {
+      result.textContent = "Unable to calculate fare. Please try again.";
+    });
+};
     });
   </script>
 </body>
