--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
   result.textContent = "Calculating...";
 
-  const apiKey = 'YOUR_API_KEY'; // Replace with your real Google Maps API key
+  const apiKey = 'AIzaSyB8Way8cUMxdfRkt0boTbFvulPxxlKjMuI'; // Replace with your real Google Maps API key
   const url = 'https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=' +
               encodeURIComponent(start) + '&destinations=' + encodeURIComponent(end) + '&key=' + apiKey;
 
