--- a/index.html
+++ b/index.html
@@ -220,8 +220,59 @@
     &copy; 2025 Rydli. All rights reserved.
   </footer>
 
-  <script>
+   <script>
     document.addEventListener('DOMContentLoaded', function () {
+      // Initialize autocomplete for address fields
+      function initAutocomplete() {
+        const startInput = document.getElementById('start');
+        const endInput = document.getElementById('end');
+
+        const startAutocomplete = new google.maps.places.Autocomplete(startInput);
+        const endAutocomplete = new google.maps.places.Autocomplete(endInput);
+
+        // Restrict to address components
+        startAutocomplete.setFields(['address_components', 'geometry', 'icon', 'name']);
+        endAutocomplete.setFields(['address_components', 'geometry', 'icon', 'name']);
+      }
+
+      // Wait until the page is loaded and initialize autocomplete
+      initAutocomplete();
+
+      // Fare estimation function
+      window.estimateFare = function () {
+        const start = document.getElementById('start').value.trim();
+        const end = document.getElementById('end').value.trim();
+        const result = document.getElementById('fare-result');
+
+        if (!start || !end) {
+          result.textContent = "Please enter both addresses.";
+          return;
+        }
+
+        result.textContent = "Calculating...";
+
+        const apiKey = 'AIzaSyB8Way8cUMxdfRkt0boTbFvulPxxlKjMuI'; // Replace with your real Google Maps API key
+        const url = 'https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=' +
+                    encodeURIComponent(start) + '&destinations=' + encodeURIComponent(end) + '&key=' + apiKey;
+
+        fetch('https://api.allorigins.win/get?url=' + encodeURIComponent(url))
+          .then(response => response.json())
+          .then(data => {
+            const content = JSON.parse(data.contents);
+            const distanceText = content.rows[0].elements[0].distance.text;
+            const durationText = content.rows[0].elements[0].duration.text;
+            const distanceMiles = parseFloat(distanceText.replace(/[^\d.]/g, ''));
+            const durationMinutes = parseFloat(durationText.replace(/[^\d.]/g, ''));
+
+            const fare = Math.max(6, (1.34 * distanceMiles + 0.45 * durationMinutes)).toFixed(2);
+            result.textContent = 'Estimated fare: $' + fare;
+          })
+          .catch(() => {
+            result.textContent = "Unable to calculate fare. Please try again.";
+          });
+      };
+
+      // Toggle sections when buttons are clicked
       function toggleView(view) {
         const sections = ['rider', 'driver', 'estimator'];
         sections.forEach(id => {
@@ -237,86 +288,17 @@
         if (activeButton) activeButton.classList.add('active');
       }
 
+      // Initial section to show
       toggleView('rider');
 
       document.getElementById('btn-rider').addEventListener('click', () => toggleView('rider'));
       document.getElementById('btn-driver').addEventListener('click', () => toggleView('driver'));
       document.getElementById('btn-estimator').addEventListener('click', () => toggleView('estimator'));
-
-      const confettiScript = document.createElement('script');
-      confettiScript.src = "https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js";
-      confettiScript.onload = () => {
-        const riderBtn = document.querySelector('a[href="https://ride.rydli.com"]');
-        const driverBtn = document.querySelector('a[href="https://drive.rydli.com"]');
-
-        if (riderBtn) {
-          riderBtn.addEventListener('click', function(e) {
-            e.preventDefault();
-            confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 } });
-            setTimeout(() => window.location.href = this.href, 1000);
-          });
-        }
-
-        if (driverBtn) {
-          driverBtn.addEventListener('click', function(e) {
-            e.preventDefault();
-            confetti({ particleCount: 150, spread: 70, origin: { y: 0.6 } });
-            setTimeout(() => window.location.href = this.href, 1000);
-          });
-        }
-      };
-      document.body.appendChild(confettiScript);
-      
-function initAutocomplete() {
-  const options = {
-    types: ['address'],
-    componentRestrictions: { country: 'US' }
-  };
-
-  const startInput = document.getElementById('start');
-  const endInput = document.getElementById('end');
-  
-  new google.maps.places.Autocomplete(startInput, options);
-  new google.maps.places.Autocomplete(endInput, options);
-}
-
-      window.estimateFare = function () {
-  const start = document.getElementById('start').value.trim();
-  const end = document.getElementById('end').value.trim();
-  const result = document.getElementById('fare-result');
-
-  if (!start || !end) {
-    result.textContent = "Please enter both addresses.";
-    return;
-  }
-
-  result.textContent = "Calculating...";
-
-  const apiKey = 'AIzaSyB8Way8cUMxdfRkt0boTbFvulPxxlKjMuI';  // Add your API key here
-  const url = 'https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=' +
-              encodeURIComponent(start) + '&destinations=' + encodeURIComponent(end) + '&key=' + apiKey;
-
-  fetch('https://api.allorigins.win/get?url=' + encodeURIComponent(url))
-    .then(response => response.json())
-    .then(data => {
-      const content = JSON.parse(data.contents);
-      const distanceText = content.rows[0].elements[0].distance.text;
-      const durationText = content.rows[0].elements[0].duration.text;
-      const distanceMiles = parseFloat(distanceText.replace(/[^\d.]/g, ''));
-      const durationMinutes = parseFloat(durationText.replace(/[^\d.]/g, ''));
-
-      const fare = Math.max(6, (1.34 * distanceMiles + 0.45 * durationMinutes)).toFixed(2);
-      result.textContent = 'Estimated fare: $' + fare;
-    })
-    .catch(() => {
-      result.textContent = "Unable to calculate fare. Please try again.";
-    });
-};
     });
   </script>
 
-  <!-- The script to load Google Maps and Places Autocomplete API -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8Way8cUMxdfRkt0boTbFvulPxxlKjMuI&libraries=places&callback=initAutocomplete" async defer></script>
+  <!-- Google Maps API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB8Way8cUMxdfRkt0boTbFvulPxxlKjMuI&libraries=places&callback=initAutocomplete" async defer></script>
 
 </body>
 </html>
