--- a/index.html
+++ b/index.html
@@ -203,16 +203,10 @@
 
 <div id="estimator" class="section">
   <section class="hero">
-    <h1>Estimate Your Fare</h1>
-    <p>Enter your start and end address to get an instant fare estimate.</p>
-    <form onsubmit="event.preventDefault(); estimateFare();" style="max-width: 500px; margin: 2rem auto; text-align: left;">
-      <label for="start" style="display:block; margin-bottom: 0.25rem; font-weight: 600;">Starting Address</label>
-      <input type="text" id="start" placeholder="123 Main St" style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid #ccc; margin-bottom: 1rem;">
-      <label for="end" style="display:block; margin-bottom: 0.25rem; font-weight: 600;">Destination Address</label>
-      <input type="text" id="end" placeholder="456 Elm St" style="width: 100%; padding: 0.75rem; border-radius: 8px; border: 1px solid #ccc; margin-bottom: 1rem;">
-      <button type="submit" style="width: 100%; padding: 0.75rem; border: none; background: black; color: white; border-radius: 999px; font-weight: 600;">Estimate Fare</button>
-    </form>
-    <p id="fare-result" style="margin-top: 1rem; font-weight: 600; font-size: 1.25rem; color: #007bff;"></p>
+    <h1>Trip Fare Examples</h1>
+    <p>Click below to generate a random trip and fare.</p>
+    <button id="generate-trip" class="button">Generate Random Trip</button>button>
+    <p id="fare-result">Click the button to get a random trip fare estimate/</p>
   </section>
 </div>
 
@@ -266,39 +260,6 @@
         }
       };
       document.body.appendChild(confettiScript);
-
-      window.estimateFare = function () {
-  const start = document.getElementById('start').value.trim();
-  const end = document.getElementById('end').value.trim();
-  const result = document.getElementById('fare-result');
-
-  if (!start || !end) {
-    result.textContent = "Please enter both addresses.";
-    return;
-  }
-
-  result.textContent = "Calculating...";
-
-  const apiKey = 'AIzaSyB8Way8cUMxdfRkt0boTbFvulPxxlKjMuI'; // Replace with your real Google Maps API key
-  const url = 'https://maps.googleapis.com/maps/api/distancematrix/json?units=imperial&origins=' +
-              encodeURIComponent(start) + '&destinations=' + encodeURIComponent(end) + '&key=' + apiKey;
-
-  fetch('https://api.allorigins.win/get?url=' + encodeURIComponent(url))
-    .then(response => response.json())
-    .then(data => {
-      const content = JSON.parse(data.contents);
-      const distanceText = content.rows[0].elements[0].distance.text;
-      const durationText = content.rows[0].elements[0].duration.text;
-      const distanceMiles = parseFloat(distanceText.replace(/[^\d.]/g, ''));
-      const durationMinutes = parseFloat(durationText.replace(/[^\d.]/g, ''));
-
-      const fare = Math.max(6, (1.34 * distanceMiles + 0.45 * durationMinutes)).toFixed(2);
-      result.textContent = 'Estimated fare: $' + fare;
-    })
-    .catch(() => {
-      result.textContent = "Unable to calculate fare. Please try again.";
-    });
-};
     });
   </script>
 </body>
