--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   <section class="hero">
     <h1>Trip Fare Examples</h1>
     <p>Click below to generate a random trip and fare.</p>
-    <button id="generate-trip" class="button">Generate Random Trip</button>button>
+    <button id="generate-trip" class="button">Generate Random Trip</button>
     <p id="fare-result">Click the button to get a random trip fare estimate/</p>
   </section>
 </div>
@@ -260,6 +260,20 @@
         }
       };
       document.body.appendChild(confettiScript);
+
+       // Random trip fare generator
+      document.getElementById('generate-trip').addEventListener('click', () => {
+        // Generate random miles and minutes
+        const distanceMiles = (Math.random() * 50 + 1).toFixed(2); // Random miles between 1 and 50
+        const durationMinutes = (Math.random() * 60 + 5).toFixed(0); // Random time between 5 and 60 minutes
+
+        // Calculate the fare
+        const fare = Math.max(6, (1.34 * distanceMiles + 0.45 * durationMinutes)).toFixed(2);
+        
+        // Display the random trip details
+        const result = document.getElementById('fare-result');
+        result.textContent = `Trip: ${distanceMiles} miles, ${durationMinutes} minutes. Estimated fare: $${fare}`;
+      });
     });
   </script>
 </body>
