--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
       50% { transform: scale(1.1); opacity: 0.8; }
       100% { transform: scale(1); opacity: 1; }
     }
+     .fare-estimator { background: #f9fafb; border-radius: 16px; box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1); }
+    #generate-trip { padding: 1rem 2rem; background: #007bff; color: white; border: none; border-radius: 12px; font-size: 1.1rem; cursor: pointer; transition: background 0.3s; }
+    #generate-trip:hover { background: #0056b3; }
+    #fare-result { margin-top: 1.5rem; font-size: 1.25rem; color: #007bff; font-weight: 600; }
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.1); opacity: 0.8; }
+      100% { transform: scale(1); opacity: 1; }
+    }
     @media (max-width: 768px) {
       .hero, .screenshots, .features, .subscriptions, .driver-benefits, .app-download {
         padding: 2rem 1rem;
