--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       100% { transform: scale(1); opacity: 1; }
     }
      .fare-estimator { background: #f9fafb; border-radius: 16px; box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1); }
-    #generate-trip { padding: 1rem 2rem; background: #007bff; color: white; border: none; border-radius: 12px; font-size: 1.1rem; cursor: pointer; transition: background 0.3s; }
+    #generate-trip { padding: 1rem 2rem; background: #007bff; color: white; border: none; border-radius: 12px; font-size: 1.1rem; cursor: pointer; transition: background 0.3s; margin-top: 20px;}
     #generate-trip:hover { background: #0056b3; }
     #fare-result { margin-top: 1.5rem; font-size: 1.25rem; color: #007bff; font-weight: 600; }
     @keyframes pulse {
@@ -215,7 +215,7 @@
     <h1>Trip Fare Examples</h1>
     <p>Click below to generate a random trip and fare.</p>
     <button id="generate-trip" class="button">Generate Random Trip</button>
-    <p id="fare-result">Click the button to get a random trip fare estimate/</p>
+    <p id="fare-result">Click the button to get a random trip fare estimate.</p>
   </section>
 </div>
 
